fix key loader config